fixed navbar overlap bug in select story page

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -1,4 +1,9 @@
 /* Experimental Navbar(Alternate)*/
+
+.large-screen{
+  display: flex;
+}
+
 nav {
   height: 6rem;
   width: 100vw;
